# codegate-alt

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  cert_gen.py  codegate.db  config.yaml  config.yaml.example  ct.yaml  demo.py  install.sh  nginx.conf  pyproject.toml  signatures.yaml  sqlc.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 0-story.yml  bug_report.yml  pioneering.yml
.github/workflows/: add_pr_project.yml  ci.yml  feature-launcher.yml  helm-chart-publish.yaml  helm-chart-test.yaml  image-build.yml  image-publish.yml  import_packages.yml  integration-tests.yml  label_issues.yml  openapi.yml  release.yml  run-on-pr.yml  run-on-push.yml  run-on-release-published.yml  security.yml  update-model-costs.yml
api/: openapi.json
certs/: ca.crt  ca.key  server.crt  server.key
data/: archived.jsonl  deprecated.jsonl  malicious.jsonl
deploy/charts/codegate/: Chart.yaml  README.md  values.yaml
docs/: cli.md  configuration.md  debugging_clients.md  development.md  logging.md  sqlc.md  workspaces.md
migrations/: env.py
migrations/versions/: 2025_01_20_1546-a692c8b52308_add_workspace_system_prompt.py  2025_01_20_1728-e6227073183d_merging_system_prompt_and_soft_deletes.py  2025_01_21_0820-4dec3e456c9e_add_on_delete_cascade.py  2025_01_22_0956-90d5471db49a_rename_system_prompt.py  2025_01_24_0758-0f9b8edc8e46_add_llm_and_mux.py  2025_01_28_0915-0c3539f66339_add_token_usage_columns.py  2025_02_19_1452-5e5cd2288147_update_matcher_types.py  2025_03_03_1008-02b710eda156_add_persona_table.py  2025_03_04_0934-3ec2b4ab569c_migrate_to_glob_pattern.py  2025_03_05_2126-e4c05d7591a8_add_installation_table.py  30d0144e1a50_init_db.py  5c2f3eee5f90_introduce_workspaces.py  8e4b4b8d1a88_add_soft_delete.py  a692c8b52308_add_workspace_system_prompt.py
models/: all-minilm-L6-v2-q5_k_m.gguf  qwen2.5-coder-1.5B.q5_k_m.gguf  qwen2.5-coder-1.5b-instruct-q5_k_m.gguf
prompts/: default.yaml
scripts/: entrypoint.sh  import_packages.py
sql/queries/: alerts.sql  outputs.sql  prompts.sql  queries.sql  settings.sql
sql/schema/: schema.sql
sqlite_data/: packages.db  vectordb.db
src/codegate/: __init__.py  cli.py  codegate_logging.py  config.py  exceptions.py  logging.py  prompts.py  server.py  sse.py
src/codegate/api/: v1.py  v1_models.py  v1_processing.py
src/codegate/ca/: codegate_ca.py
src/codegate/clients/: clients.py  detector.py
src/codegate/core/: security.py
src/codegate/dashboard/: dashboard.py  post_processing.py  request_models.py
src/codegate/db/: connection.py  fim_cache.py  init_db.py  models.py  queries.py  token_usage.py  utils.py
src/codegate/extract_snippets/: body_extractor.py  factory.py  message_extractor.py
src/codegate/inference/: __init__.py  inference_engine.py
src/codegate/llm_utils/: __init__.py  extractor.py  llmclient.py
src/weaviate_data/: classifications.db  schema.db
tests/: conftest.py  test_cli.py  test_cli_prompts.py  test_config.py  test_inference.py  test_llmclient_base.py  test_llmclient_types.py  test_logging.py  test_prompts.py  test_provider.py  test_server.py  test_storage.py  test_suspicious_commands.py
tests/api/: test_v1_processing.py  test_v1_workspaces.py
tests/clients/: test_detector.py
tests/dashboard/: test_post_processing.py
tests/data/: demo-prompts.yaml  invalid_prompts.yaml
tests/db/: test_connection.py  test_fim_cache.py
tests/extract_snippets/: test_body_extractor.py  test_message_extractor.py
tests/integration/: checks.py  integration_tests.py  requesters.py  testcases.yaml
tests/muxing/: test_adapter.py  test_persona.py  test_rulematcher.py  test_semantic_router.py
tests/pipeline/: test_messages_block.py  test_output.py  test_systemmsg.py
tests/providers/: test_fim_analyzer.py  test_registry.py
tests/utils/: test_extractor.py
tests/vectordb/: test_sqlitevec.py
utils/: embedding_util.py
weaviate_data/: classifications.db  schema.db
weaviate_data/raft/: raft.db
(+152 files in other folders)
