[tool.poetry]
name = "codegate"
version = "0.1.0"
description = "Generative AI CodeGen security gateway"
readme = "README.md"
authors = []
packages = [{include = "codegate", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
click = ">=8.1.0"
PyYAML = ">=6.0.1"
fastapi = ">=0.115.5"
uvicorn = ">=0.32.1"

litellm = "^1.52.15"
llama_cpp_python = ">=0.3.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=23.7.0"
ruff = ">=0.7.4"
bandit = ">=1.7.10"
build = ">=1.0.0"
wheel = ">=0.40.0"
litellm = ">=1.52.11"
pytest-asyncio = "0.24.0"
llama_cpp_python = ">=0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codegate = "codegate.cli:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
addopts = "-v --cov=codegate --cov-report=term-missing"
testpaths = ["tests"]
